--- a/package.json
+++ b/package.json
@@ -1,38 +1,62 @@
 {
-  "name": "monaco-test",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.6",
-    "@angular/cli": "^18.0.6",
-    "@angular/compiler-cli": "^18.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
-  }
+    "name": "monaco-test",
+    "version": "0.0.0",
+    "main": "./main.js",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "electron": "ng build cor-code --base-href ./ && electron .",
+        "electron:serve": "electron . --serve --dev-tools",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^18.0.0",
+        "@angular/common": "^18.0.0",
+        "@angular/compiler": "^18.0.0",
+        "@angular/core": "^18.0.0",
+        "@angular/forms": "^18.0.0",
+        "@angular/platform-browser": "^18.0.0",
+        "@angular/platform-browser-dynamic": "^18.0.0",
+        "@angular/router": "^18.0.0",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.14.3",
+        "@codingame/monaco-vscode-configuration-service-override": "7.0.7",
+        "@codingame/monaco-vscode-extensions-service-override": "7.0.7",
+        "@codingame/monaco-vscode-files-service-override": "7.0.7",
+        "@codingame/monaco-vscode-languages-service-override": "7.0.7",
+        "@codingame/monaco-vscode-model-service-override": "7.0.7",
+        "@codingame/monaco-vscode-remote-agent-service-override": "7.0.7",
+        "@codingame/monaco-vscode-rollup-vsix-plugin": "7.0.7",
+        "@codingame/monaco-vscode-search-service-override": "7.0.7",
+        "@codingame/monaco-vscode-swift-default-extension": "7.0.7",
+        "@codingame/monaco-vscode-textmate-service-override": "7.0.7",
+        "@codingame/monaco-vscode-theme-defaults-default-extension": "7.0.7",
+        "@codingame/monaco-vscode-theme-service-override": "7.0.7",
+        "@codingame/monaco-vscode-views-service-override": "7.0.7",
+        "@types/wicg-file-system-access": "^2023.10.5",
+        "electron-settings": "^4.0.4",
+        "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@7.0.7",
+        "vscode": "npm:@codingame/monaco-vscode-api@7.0.7"
+    },
+    "devDependencies": {
+        "@angular-builders/custom-webpack": "^18.0.0",
+        "@angular-devkit/build-angular": "^18.0.6",
+        "@angular/cli": "^18.0.6",
+        "@angular/compiler-cli": "^18.0.0",
+        "@types/jasmine": "~5.1.0",
+        "electron": "^31.1.0",
+        "jasmine-core": "~5.1.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
+        "typescript": "~5.4.2",
+        "@types/vscode": "^1.91.0",
+        "@types/node": "^20.14.10"
+    }
 }
