--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+        "node"
+    ]
   },
   "files": [
     "src/main.ts"
