--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "electron": "ng build cor-code --base-href ./ && electron .",
+        "electron": "ng build --base-href ./ && electron . --dev-tools",
         "electron:serve": "electron . --serve --dev-tools",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
@@ -21,33 +21,48 @@
         "@angular/platform-browser": "^18.0.0",
         "@angular/platform-browser-dynamic": "^18.0.0",
         "@angular/router": "^18.0.0",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.14.3",
+        "@codingame/monaco-vscode-all-default-extensions": "^7.0.7",
+        "@codingame/monaco-vscode-chat-service-override": "^7.0.7",
         "@codingame/monaco-vscode-configuration-service-override": "7.0.7",
+        "@codingame/monaco-vscode-debug-service-override": "^7.0.7",
+        "@codingame/monaco-vscode-explorer-service-override": "^7.0.7",
+        "@codingame/monaco-vscode-extension-gallery-service-override": "^7.0.7",
         "@codingame/monaco-vscode-extensions-service-override": "7.0.7",
         "@codingame/monaco-vscode-files-service-override": "7.0.7",
+        "@codingame/monaco-vscode-language-detection-worker-service-override": "^7.0.7",
         "@codingame/monaco-vscode-languages-service-override": "7.0.7",
         "@codingame/monaco-vscode-model-service-override": "7.0.7",
         "@codingame/monaco-vscode-remote-agent-service-override": "7.0.7",
         "@codingame/monaco-vscode-rollup-vsix-plugin": "7.0.7",
+        "@codingame/monaco-vscode-scm-service-override": "^7.0.7",
         "@codingame/monaco-vscode-search-service-override": "7.0.7",
+        "@codingame/monaco-vscode-storage-service-override": "^7.0.7",
         "@codingame/monaco-vscode-swift-default-extension": "7.0.7",
+        "@codingame/monaco-vscode-terminal-service-override": "^7.0.7",
         "@codingame/monaco-vscode-textmate-service-override": "7.0.7",
         "@codingame/monaco-vscode-theme-defaults-default-extension": "7.0.7",
         "@codingame/monaco-vscode-theme-service-override": "7.0.7",
         "@codingame/monaco-vscode-views-service-override": "7.0.7",
+        "@nitedani/vite-plugin-angular": "^17.0.11",
         "@types/wicg-file-system-access": "^2023.10.5",
         "electron-settings": "^4.0.4",
         "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@7.0.7",
-        "vscode": "npm:@codingame/monaco-vscode-api@7.0.7"
+        "onigasm": "^2.2.5",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "vscode": "npm:@codingame/monaco-vscode-api@7.0.7",
+        "zone.js": "~0.14.3"
     },
     "devDependencies": {
+        "@analogjs/vite-plugin-angular": "^1.6.1",
+        "@angular-builders/custom-esbuild": "^18.0.0",
         "@angular-builders/custom-webpack": "^18.0.0",
         "@angular-devkit/build-angular": "^18.0.6",
         "@angular/cli": "^18.0.6",
         "@angular/compiler-cli": "^18.0.0",
         "@types/jasmine": "~5.1.0",
+        "@types/node": "^20.14.10",
+        "@types/vscode": "^1.91.0",
         "electron": "^31.1.0",
         "jasmine-core": "~5.1.0",
         "karma": "~6.4.0",
@@ -55,8 +70,6 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
-        "typescript": "~5.4.2",
-        "@types/vscode": "^1.91.0",
-        "@types/node": "^20.14.10"
+        "typescript": "~5.4.2"
     }
 }
