--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-    "name": "monaco-test",
-    "version": "0.0.0",
-    "main": "./main.js",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "electron": "ng build --base-href ./ && electron . --dev-tools",
-        "electron:serve": "electron . --serve --dev-tools",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test"
-    },
+    "name": "monaco-test-react",
     "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
     "dependencies": {
-        "@angular/animations": "^18.0.0",
-        "@angular/common": "^18.0.0",
-        "@angular/compiler": "^18.0.0",
-        "@angular/core": "^18.0.0",
-        "@angular/forms": "^18.0.0",
-        "@angular/platform-browser": "^18.0.0",
-        "@angular/platform-browser-dynamic": "^18.0.0",
-        "@angular/router": "^18.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
         "@codingame/monaco-vscode-all-default-extensions": "^7.0.7",
         "@codingame/monaco-vscode-chat-service-override": "^7.0.7",
         "@codingame/monaco-vscode-configuration-service-override": "7.0.7",
@@ -43,33 +35,21 @@
         "@codingame/monaco-vscode-theme-defaults-default-extension": "7.0.7",
         "@codingame/monaco-vscode-theme-service-override": "7.0.7",
         "@codingame/monaco-vscode-views-service-override": "7.0.7",
-        "@nitedani/vite-plugin-angular": "^17.0.11",
-        "@types/wicg-file-system-access": "^2023.10.5",
-        "electron-settings": "^4.0.4",
-        "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@7.0.7",
-        "onigasm": "^2.2.5",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "vscode": "npm:@codingame/monaco-vscode-api@7.0.7",
-        "zone.js": "~0.14.3"
-    },
-    "devDependencies": {
-        "@analogjs/vite-plugin-angular": "^1.6.1",
-        "@angular-builders/custom-esbuild": "^18.0.0",
-        "@angular-builders/custom-webpack": "^18.0.0",
-        "@angular-devkit/build-angular": "^18.0.6",
-        "@angular/cli": "^18.0.6",
-        "@angular/compiler-cli": "^18.0.0",
-        "@types/jasmine": "~5.1.0",
-        "@types/node": "^20.14.10",
         "@types/vscode": "^1.91.0",
         "electron": "^31.1.0",
-        "jasmine-core": "~5.1.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.2.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.1.0",
-        "typescript": "~5.4.2"
+        "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@7.0.7",
+        "vscode": "npm:@codingame/monaco-vscode-api@7.0.7"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4"
     }
 }
